move links to navbar

--- a/index.html
+++ b/index.html
@@ -2,18 +2,32 @@
 <html>
   <head>
     <title>Sevastopol ruby community pages</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" media="all" rel="stylesheet" type="text/css" />
+    <link href="assets/stylesheets/bootstrap.min.css" media="all" rel="stylesheet" type="text/css" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
   </head>
 
   <body>
+		<nav class="navbar navbar-default visible-lg-block">
+			<div class="navbar-header">
+				<span class="navbar-brand" href="#">Links</span>
+			</div>
+			<div class="container-fluid">
+				<ul class="nav navbar-nav">
+					<li><a href="https://blackseacoders.slack.com">Slack</a></li>
+				</ul>
+			</div>
+		</nav>
+
+		<nav class="navbar navbar-default navbar-fixed-bottom hidden-lg">
+			<div class="container-fluid">
+				<ul class="nav navbar-nav">
+					<li><a href="https://blackseacoders.slack.com">Slack</a></li>
+				</ul>
+			</div>
+		</nav>
+
     <div class="container">
       <h1>Sevastopol ruby community pages</h1>
-
-      <h2>Links</h2>
-      <ul>
-        <li><a href="https://sevastopolrb.slack.com">Slack</a></li>
-      </ul>
 
       <h2>Invite yourself to our slack chat</h2>
 
