--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
     <title>BlackSeaCoders</title>
     <link href="assets/stylesheets/bootstrap.min.css" media="all" rel="stylesheet" type="text/css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
   </head>
 
   <body>
@@ -33,7 +34,7 @@
 
       <p id="message"></p>
 
-      <form class="form-inline" action="https://izruq77r6b.execute-api.us-east-1.amazonaws.com/dev/invite" method="post" onsubmit="invite(); return false;">
+      <form class="form-inline" action="https://jb4radl34e.execute-api.us-east-1.amazonaws.com/dev/invite" method="post" onsubmit="invite(); return false;">
         <div class="form-group">
           <input class="form-control" name="email" type="text" placeholder="email@example.com">
         </div>
@@ -53,8 +54,14 @@
             xhr.onload = function() {
               if (xhr.status === 200) {
                 var response = JSON.parse(xhr.responseText);
-                var body = JSON.parse(response.body);
-                document.getElementById('message').innerText = response.body;
+                var error = response.error;
+
+                if (error) {
+                  document.getElementById('message').innerText = error.replace(/_/g, ' ');
+                } else {
+                  document.getElementById('message').innerText = 'Check your email, we have sent an invitation!';
+                  form.reset();
+                }
               }
             };
 
