Add chat screenshot to page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
     <title>BlackSeaCoders</title>
     <link href="assets/stylesheets/bootstrap.min.css" media="all" rel="stylesheet" type="text/css" />
+    <link href="assets/stylesheets/application.css" media="all" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
@@ -12,6 +13,7 @@
       <h1>BlackSeaCoders community</h1>
       <a href="https://join.slack.com/t/blackseacoders/shared_invite/enQtNTM3MTk5MDYyMTk3LThkNzU1MGM2OGNhYWY4OTA5YjQ5NWFmMzM2N2YyYTE0YWJkZTg2Mzk1NmFiYzIxOWE0MmQ4YzYxYzQ1NzNhNjY" target="_blank">Invite yourself</a> to our <a href="https://blackseacoders.slack.com">Slack workspace</a>
 
+      <img class="chat-screenshot" src="assets/images/chat-screenshot.png"/>
     </div>
   </body>
 </html>
