Add subtitle, change background

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 
   <body>
     <div class="container">
-      <h1>BlackSeaCoders community</h1>
+      <header>
+        <h1>BlackSeaCoders community</h1>
+        <p class="subtitle">Dev community around Black Sea. Born in Sevastopol. Former sevastopol.rb</p>
+      </header>
+
       <a href="https://join.slack.com/t/blackseacoders/shared_invite/enQtNTM3MTk5MDYyMTk3LThkNzU1MGM2OGNhYWY4OTA5YjQ5NWFmMzM2N2YyYTE0YWJkZTg2Mzk1NmFiYzIxOWE0MmQ4YzYxYzQ1NzNhNjY" target="_blank">Invite yourself</a> to our <a href="https://blackseacoders.slack.com">Slack workspace</a>
 
       <img class="chat-screenshot" src="assets/images/chat-screenshot.png"/>
