--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+    <meta name="yandex-verification" content="3c11bedd2a11c0f8" />
     <title>BlackSeaCoders</title>
     <link href="assets/stylesheets/bootstrap.min.css" media="all" rel="stylesheet" type="text/css" />
     <link href="assets/stylesheets/application.css" media="all" rel="stylesheet" type="text/css" />
